--- a/results/environment_effects/thalamocortical_connectivity_environment.Rmd
+++ b/results/environment_effects/thalamocortical_connectivity_environment.Rmd
@@ -142,10 +142,7 @@ ggplot() +
    new_scale_fill() + 
   geom_brain(data = sigeffects.positivet.df, atlas = glasser, mapping = aes(fill = tractlist, colour=I("black"), size=I(.05))) + 
   scale_fill_manual(values = c("gray89", alpha("white", 0)), na.value = "white") +
-   theme(
-   legend.text = element_text(size = 5, family = "Arial", color = c("black")),
-   legend.key.size = unit(1, 'mm'),
-   legend.title = element_text(size = 5, family = "Arial", color = c("black")))
+   theme(legend.position = "none")
 
 ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure7/envSES_corticalmap.pdf", device = "pdf", dpi = 500,  width = 4.35, height = 4)
 ```
@@ -416,14 +413,14 @@ compute_axis_correlation(axis = "z.mni")
 compute_axis_correlation(axis = "CPt")
 ```
 
-Correct axis correlation ps 
+FDR-correct axis correlation ps 
 
 ```{r}
 axis.cor.ps <- c(0.0056, 0.38685, 0.10335, 0.07605, 0.15965) #S-A, A-P, M-L, D-V, C-M
 p.adjust(axis.cor.ps, method = c("fdr"))
 ```
 
-Correct correlation comparison ps
+FDR-correct correlation comparison ps
 
 ```{r}
 anatomical.ps <- c(0.0005890574, 0.3319559, 0.3909002, 4.3867e-07) #A-P, M-L, D-V, C-M
@@ -441,21 +438,26 @@ axis.results <- axis.results %>% add_row(Axis = "C-M", corr = -0.1265908)
 
 axis.results$Axis <- factor(axis.results$Axis, ordered = TRUE, levels = c("S-A", "D-V", "M-L", "A-P", "C-M"))
 
-ggplot(axis.results, aes(x = Axis, y = corr, fill = Axis)) + 
-  geom_bar(stat='identity') + 
-  labs(x="") +
+ggplot(axis.results, aes(x = Axis, y = corr)) + 
+  geom_segment(aes(x = Axis, xend = Axis,  yend =  
+                     corr, y = 0), linewidth = 0.2) +
+  geom_point(aes(fill = Axis), size = 3.2, shape = 22, color = alpha("white", 0)) +
+  geom_hline(yintercept = 0, linewidth = 0.15, linetype = "dotted") +
+  scale_y_continuous(limits = c(-0.15, 0.325)) +
+  labs(x="Neuroaxis") +
   labs(y="\nEnvironment Effect Correlation") +
-  theme_classic()+
-  scale_fill_manual(values=c(alpha("#323280", 0.5), "#672975", "#672975", "#672975", "#672975")) +
+  theme_classic() +
+  scale_fill_manual(values=c("#672975", "#9898BF", "#9898BF", "#9898BF", "#9898BF")) +
   theme(
   legend.position = "none", 
   axis.text = element_text(size = 5, family = "Arial", color = c("black")),
+  axis.text.x = element_text(vjust = 0.7, angle = 20),
   axis.title.x = element_text(size = 5, family ="Arial", color = c("black")),
   axis.title.y = element_text(size = 5, family ="Arial", color = c("black")),
   axis.line = element_line(linewidth = .2), 
   axis.ticks = element_line(linewidth = .2))
 
-ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure7/EnvEffect_anatomicalaxes_barplot.pdf", device = "pdf", dpi = 500, width = 1.58, height = 1.3)
+ggsave(filename = "/cbica/projects/thalamocortical_development/figures/images/Figure7/EnvEffect_anatomicalaxes_lollyplot.pdf", device = "pdf", dpi = 500, width = 1.58, height = 1.34)
 ```
 
 ## Effect magnitude enrichment testing (S-A axis quintiles)
